--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body
     {
-      background-image: url(bg2.jpg);
+      background-image: url(back4.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: 100% 100%;
