--- a/code2.html
+++ b/code2.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta http-equiv="refresh" content="500">
-  <title>LIVE CODE EDITOR - ACE</title>
+  <title>LIVE CODE EDITOR - ACE + Timer</title>
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/ec1da4970b.js" crossorigin="anonymous"></script>
 
-  <!-- Ace Editor + Extensions -->
+  <!-- Ace Editor -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.3/ace.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.3/ext-language_tools.min.js"></script>
 
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: whitesmoke;
+      margin: 0;
+    }
     .editor {
       height: 200px;
       width: 100%;
@@ -23,10 +26,9 @@
       margin-bottom: 10px;
       font-size: 14px;
     }
-
     .save-btn {
       display: inline-block;
-      margin-bottom: 25px;
+      margin-bottom: 20px;
       padding: 8px 12px;
       background-color: black;
       color: white;
@@ -35,84 +37,61 @@
       cursor: pointer;
       font-size: 15px;
     }
-
     .save-btn:hover {
       background-color: blue;
     }
-
     .container {
-      background-color: whitesmoke;
       display: flex;
       gap: 10px;
       padding: 20px;
     }
-
     .left {
       flex: 1;
     }
-
     .right {
       flex: 1;
     }
-
     iframe {
       width: 100%;
       height: 800px;
       border: 1px solid #ccc;
       border-radius: 10px;
     }
-
-    /* Stopwatch Styles */
     #stopwatch {
-      text-align: center;
-      margin: 30px auto;
-      padding: 20px;
-      background-color: #fff;
-      width: 300px;
-      border: 2px solid black;
-      border-radius: 15px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      padding: 10px 20px;
+      background: white;
+      border-bottom: 2px solid #ccc;
+      display: flex;
+      align-items: center;
+      gap: 10px;
     }
-
-    #display {
-      font-size: 32px;
-      font-weight: bold;
-      margin-bottom: 15px;
+    #timeInput {
+      width: 100px;
+      padding: 5px;
+      font-size: 14px;
     }
-
-    #popup {
-      position: fixed;
-      top: 30%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: white;
-      border: 2px solid black;
-      padding: 20px 40px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-      font-size: 18px;
-      z-index: 1000;
-      display: none;
-      border-radius: 10px;
-      text-align: center;
-    }
-
-    #popup button {
-      margin-top: 15px;
-      padding: 8px 16px;
-      background-color: black;
+    #startBtn {
+      padding: 5px 10px;
+      font-size: 14px;
+      background: black;
       color: white;
       border: none;
       border-radius: 6px;
       cursor: pointer;
     }
+    #startBtn:hover {
+      background-color: blue;
+    }
+    #timerDisplay {
+      font-weight: bold;
+      font-size: 16px;
+    }
   </style>
 
   <script>
+   
     let htmlEditor, cssEditor, jsEditor;
-
-    window.addEventListener("beforeunload", function (event) {
-      event.returnValue = "Are you sure you want to refresh? Any unsaved changes will be lost.";
-    });
+    let countdown;
 
     window.onload = function () {
       ace.require("ace/ext/language_tools");
@@ -176,65 +155,56 @@
       saveFile('script.js', jsEditor.getValue());
     }
 
-    // Stopwatch Logic
-    let stopwatchInterval;
-    let startTime;
-    let userSetTime = 0;
+    function startTimer() {
+      let seconds = parseInt(document.getElementById("timeInput").value);
+      let display = document.getElementById("timerDisplay");
 
-    function startStopwatch() {
-      const input = document.getElementById('set-time').value;
-      userSetTime = parseInt(input);
-
-      if (isNaN(userSetTime) || userSetTime <= 0) {
+      if (isNaN(seconds) || seconds <= 0) {
         alert("Please enter a valid number of seconds.");
         return;
       }
 
-      const display = document.getElementById('display');
-      let elapsed = 0;
-      startTime = Date.now();
+      display.textContent = `Time Left: ${seconds}s`;
 
-      clearInterval(stopwatchInterval);
+      clearInterval(countdown);
+      countdown = setInterval(() => {
+        seconds--;
+        display.textContent = `Time Left: ${seconds}s`;
 
-      stopwatchInterval = setInterval(() => {
-        elapsed = Math.floor((Date.now() - startTime) / 1000);
-        let hrs = Math.floor(elapsed / 3600);
-        let mins = Math.floor((elapsed % 3600) / 60);
-        let secs = elapsed % 60;
-
-        display.textContent =
-          `${String(hrs).padStart(2, '0')}:${String(mins).padStart(2, '0')}:${String(secs).padStart(2, '0')}`;
-
-        if (elapsed >= userSetTime) {
-          clearInterval(stopwatchInterval);
-          showTimeoutPopup();
+        if (seconds <= 0) {
+          clearInterval(countdown);
+          display.textContent = "Time's up!";
+          exitPage();
         }
       }, 1000);
     }
 
-    function showTimeoutPopup() {
-      const popup = document.getElementById('popup');
-      popup.style.display = 'block';
-    }
-
-    function closePopup() {
-      document.getElementById('popup').style.display = 'none';
+    function exitPage() {
+      // Safely navigate to blank or another page
+      window.location.href = "index.html";
     }
   </script>
 </head>
 
 <body>
+  <div id="stopwatch">
+    <label><i class="fa-regular fa-clock"></i> Timer (sec):</label>
+    <input type="number" id="timeInput" placeholder="e.g. 60" />
+    <button id="startBtn" onclick="startTimer()">Start</button>
+    <div id="timerDisplay">Not started</div>
+  </div>
+
   <div class="container">
     <div class="left">
       <label><i class="fa-solid fa-code"></i> HTML</label>
       <div id="html-editor" class="editor"></div>
       <button class="save-btn" onclick="saveHTML()">Save HTML</button>
 
-      <label></br><i class="fa-brands fa-css3-alt"></i> CSS</label>
+      <label><br><i class="fa-brands fa-css3-alt"></i> CSS</label>
       <div id="css-editor" class="editor"></div>
       <button class="save-btn" onclick="saveCSS()">Save CSS</button>
 
-      <label></br><i class="fa-brands fa-js"></i> JAVASCRIPT</label>
+      <label><br><i class="fa-brands fa-js"></i> JAVASCRIPT</label>
       <div id="js-editor" class="editor"></div>
       <button class="save-btn" onclick="saveJS()">Save JS</button>
     </div>
@@ -244,21 +214,5 @@
       <iframe id="output"></iframe>
     </div>
   </div>
-
-  <!-- Stopwatch -->
-  <div id="stopwatch">
-    <h2>Stopwatch ⏱️</h2>
-    <div id="display">00:00:00</div>
-    <label>Set Time (seconds):</label>
-    <input type="number" id="set-time" placeholder="e.g. 10" style="padding: 5px; width: 80px; margin: 0 10px;">
-    <button onclick="startStopwatch()" class="save-btn">Start</button>
-  </div>
-
-  <!-- Timeout Popup -->
-  <div id="popup">
-    <strong>⏰ Time's Up!</strong><br><br>
-    <button onclick="closePopup()">OK</button>
-  </div>
 </body>
-
 </html>
