--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LIVE CODE EDITOR...</title>
   <style>
-    body
-    {
+    body {
       background-image: url(back4.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
@@ -17,6 +17,7 @@
       align-items: center;
       justify-content: center;
     }
+
     .btn-container {
       margin-top: 600px;
       display: flex;
@@ -42,10 +43,12 @@
     }
   </style>
 </head>
+
 <body>
   <div class="btn-container">
-    <a class="btn" href="code.html">EDITOR</a>
+    <a class="btn" href="code1.html">EDITOR</a>
     <a class="btn" href="code2.html">WORKSPACE</a>
   </div>
 </body>
+
 </html>
