--- a/code2.html
+++ b/code2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>LIVE CODE EDITOR - Auto Save on Timer</title>
+  <title>LIVE CODE EDITOR</title>
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/ec1da4970b.js" crossorigin="anonymous"></script>
