--- a/code1.html
+++ b/code1.html
@@ -9,9 +9,12 @@
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/ec1da4970b.js" crossorigin="anonymous"></script>
 
-  <!-- Ace Editor + Extensions -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.3/ace.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.3/ext-language_tools.min.js"></script>
+  <script src="ace/ace.js"></script>
+<script src="ace/ext-language_tools.js"></script>
+<script src="ace/mode-html.js"></script>
+<script src="ace/mode-css.js"></script>
+<script src="ace/mode-javascript.js"></script>
+<script src="ace/theme-monokai.js"></script>
 
   <style>
     body {
